--- a/language/oop5.xml
+++ b/language/oop5.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- EN-Revision: 325666 Maintainer: progcom Status: ready -->
+<!-- EN-Revision: 337370 Maintainer: progcom Status: ready -->
+<!-- CREDITS: acidd15 -->
  <chapter xml:id="language.oop5" xmlns="http://docbook.org/ns/docbook">
   <title>클래스와 객체</title>
 
@@ -41,6 +42,7 @@
   &language.oop5.abstract;
   &language.oop5.interfaces;
   &language.oop5.traits;
+  &language.oop5.anonymous;
   &language.oop5.overloading;
   &language.oop5.iterations;
   &language.oop5.magic;
