--- a/language/oop5/final.xml
+++ b/language/oop5/final.xml
@@ -6,13 +6,13 @@
  <sect1 xml:id="language.oop5.final" xmlns="http://docbook.org/ns/docbook">
   <title>Final 키워드</title>
   <para>
-   PHP 5는 자식 클래스가 메쏘드를 덮어 쓰는 것을 막도록, final 키워드를
+   PHP 5는 자식 클래스가 메소드를 덮어 쓰는 것을 막도록, final 키워드를
    지원합니다. 정의시에 <emphasis>final</emphasis>을 앞에 붙이면 됩니다. 클래스 자체를 final로
    정의하면 상속할 수 없습니다.
   </para>
   <para>
    <example>
-    <title>Final 메쏘드 예제</title>
+    <title>Final 메소드 예제</title>
     <programlisting role="php">
 <![CDATA[
 <?php
@@ -64,7 +64,7 @@ class ChildClass extends BaseClass {
   </para>
   <note>
    <simpara>
-    프로퍼티는 final로 선언될수 없으며, 오직 클래스와 메서드만 final로 선언될 수 있습니다.
+    프로퍼티는 final로 선언될수 없으며, 오직 클래스와 메소드만 final로 선언될 수 있습니다.
    </simpara>
   </note>
  </sect1>
